--- a/index.html
+++ b/index.html
@@ -6,9 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DogApi</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
     <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Dog-API</h1>
+
+        <nav>
+            <ul></ul>
+        </nav>
+
+        
+        <div class="img-container">
+            <span class="sort">Hund</span>
+            <div class="images"></div>
+
+            <div class="button-container">
+                <button id="random">New IMG</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
