--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DogApi</title>
+    <title>Dog-API</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
     <script src="main.js" defer></script>
 </head>
 <body>
@@ -21,13 +17,16 @@
             <ul></ul>
         </nav>
 
-        
         <div class="img-container">
-            <span class="sort">Hund</span>
-            <div class="images"></div>
+            <div class="sort-container">
+                <span class="sort">Hund</span>
+            </div>
+            <div class="image-container">
+                <div class="images"></div>
+            </div>
 
             <div class="button-container">
-                <button id="random">New IMG</button>
+                <button id="random">Ändra bilder</button>
             </div>
         </div>
     </div>
