Jag skrev om koden på ett renare sätt, kommenterade koden och stylade bättre  --> 100% Done

--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Dog-API</h1>
+    <h1>Dog-API</h1>
+    
+    <div class="container">    
 
         <nav>
             <ul></ul>
         </nav>
 
-        <div class="img-container">
-            <div class="sort-container">
-                <span class="sort">Hund</span>
+        
+        <div class="right-side">
+            <div class="dogType-container">
+                <span class="dogType"></span>
             </div>
             <div class="image-container">
                 <div class="images"></div>
             </div>
 
             <div class="button-container">
-                <button id="random">Ändra bilder</button>
+                <button id="random-dog">Ändra bilder</button>
             </div>
         </div>
     </div>
